--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-TOKEN=TOKEN
-EMBED_COLOR=#cc4545
-DATABASE_CONNECT=URL MONGODB -> VÊ O PRIMEIRO VÍDEO
-GUILD_ID=788318198411558912
-CHANNEL_LOGS=797800248948293673
+TOKEN=OTQyNTE3NzczNDQ2Mjg3NDgx.YglqFA.OCqJrNauj_ZP0UIbcx8Zwb8E7bs
+DATABASE_CONNECT=mongodb+srv://admin:369963@evil.msnrg.mongodb.net/Evil?retryWrites=true&w=majority
+EMBED=#030303
+GUILD_ID=498668345307168768
+CHANNEL_LOGS=942520906633322527
+OWNER_ID=902673268627099690
 
 HOST=LAVALINK_HOST
 PORT=LAVALINK_PORT
